--- a/WinFormSampleManager/WinFormSampleManager.csproj
+++ b/WinFormSampleManager/WinFormSampleManager.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -37,7 +37,7 @@
       <HintPath>..\packages\SGMapKit.Core.3.0.6\lib\net40\SGMapKit.Core.dll</HintPath>
     </Reference>
     <Reference Include="SGShareKit.WinForms, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SGShareKit.WinForms.1.0.0\lib\net40\SGShareKit.WinForms.dll</HintPath>
+      <HintPath>..\packages\SGShareKit.WinForms.1.0.1\lib\net40\SGShareKit.WinForms.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
