--- a/WinFormSamplePlugins/GeometrySamples/packages.config
+++ b/WinFormSamplePlugins/GeometrySamples/packages.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="SGMapKit.Core" version="3.0.6" targetFramework="net45" />
   <package id="SGMapKit.WinForms" version="3.0.6" targetFramework="net45" />
