--- a/WinFormSampleManager/App.config
+++ b/WinFormSampleManager/App.config
@@ -9,6 +9,10 @@
         <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.0.105.2" newVersion="1.0.105.2" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="SGMapKit.Core" publicKeyToken="77c845dea9a04899" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
